--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
+            I'm Creative Director and UI/UX Designer from Bangalore, India, working in web development and print media.
             I enjoy
             turning complex problems into simple, beautiful and intuitive designs.
           </p>
@@ -532,9 +532,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">Brindravan College of Engineering</h4>
 
-              <span>2007 — 2008</span>
+              <span>2019 — 2023</span>
 
               <p class="timeline-text">
                 Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
@@ -546,9 +546,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">Karnataka Composite PU College</h4>
 
-              <span>2006 — 2007</span>
+              <span>2017 — 2019</span>
 
               <p class="timeline-text">
                 Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
@@ -559,9 +559,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
+              <h4 class="h4 timeline-item-title">HP Newton Public English School</h4>
 
-              <span>2002 — 2004</span>
+              <span>2004 — 2016</span>
 
               <p class="timeline-text">
                 Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
