re-designing "client logo"

--- a/index.html
+++ b/index.html
@@ -440,49 +440,50 @@
 
         <section class="clients">
 
-          <h3 class="h3 clients-title">Clients</h3>
+  <h3 class="h3 clients-title">Clients</h3>
 
-          <ul class="clients-list has-scrollbar">
+  <ul class="clients-list has-scrollbar">
 
-            <li class="clients-item">
-              <a href="https://unacademy.com">
-                <img src="./assets/images/unacademyx.png" alt="client logo">
-              </a>
-            </li>
+    <li class="clients-item">
+      <a href="https://unacademy.com">
+        <img src="./assets/images/unacademyx.png" alt="Unacademy logo" class="client-logo">
+      </a>
+    </li>
 
-            <li class="clients-item">
-              <a href="https://www.royalorchidhotels.com">
-                <img src="./assets/images/Resort.png" alt="client logo">
-              </a>
-            </li>
+    <li class="clients-item">
+      <a href="https://www.royalorchidhotels.com">
+        <img src="./assets/images/Resort.png" alt="Royal Orchid Hotels logo" class="client-logo">
+      </a>
+    </li>
 
-            <li class="clients-item">
-              <a href="https://levotel.in">
-                <img src="./assets/images/levotel.png" alt="client logo">
-              </a>
-            </li>
+    <li class="clients-item">
+      <a href="https://levotel.in">
+        <img src="./assets/images/levotel.png" alt="Levotel logo" class="client-logo">
+      </a>
+    </li>
 
-            <li class="clients-item">
-              <a href="https://spherebox.in">
-                <img src="./assets/images/sphere.jpg" alt="client logo">
-              </a>
-            </li>
+    <li class="clients-item">
+      <a href="https://spherebox.in">
+        <img src="./assets/images/sphere.jpg" alt="Spherebox logo" class="client-logo">
+      </a>
+    </li>
 
-            <li class="clients-item">
-              <a href="http://aircomfortsystems.in">
-                <img src="./assets/images/acs.png" alt="client logo">
-              </a>
-            </li>
+    <li class="clients-item">
+      <a href="http://aircomfortsystems.in">
+        <img src="./assets/images/acs.png" alt="Air Comfort Systems logo" class="client-logo">
+      </a>
+    </li>
 
-            <li class="clients-item">
-              <a href="https://www.facebook.com/sandgrouse.in">
-                <img src="./assets/images/sand.png" alt="client logo">
-              </a>
-            </li>
+    <li class="clients-item">
+      <a href="https://www.facebook.com/sandgrouse.in">
+        <img src="./assets/images/sand.png" alt="Sand Grouse logo" class="client-logo">
+      </a>
+    </li>
 
-          </ul>
+  </ul>
 
-        </section>
+</section>
+
 
       </article>
 
