feat 'update company name'

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           </p>
         
           <p>
-            Currently, I lead IT operations at Unacademy, ensuring robust system performance, security compliance, and infrastructure scalability. My expertise includes troubleshooting complex IT environments, streamlining workflows, and implementing strategic technology solutions to enhance productivity.
+            Currently, I lead IT operations at Spherebox Infra Pvt Ltd., ensuring robust system performance, security compliance, and infrastructure scalability. My expertise includes troubleshooting complex IT environments, streamlining workflows, and implementing strategic technology solutions to enhance productivity.
           </p>
         
           <p>
