feat "update clickale object" - new tab variable

--- a/index.html
+++ b/index.html
@@ -128,31 +128,31 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://www.facebook.com/profile.php?id=100011956123647" class="social-link">
+            <a href="https://www.facebook.com/profile.php?id=100011956123647" target="_blank" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://x.com/SK_Gupta143" class="social-link">
+            <a href="https://x.com/SK_Gupta143" target="_blank" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://instagram.com/sk.gupta507" class="social-link">
+            <a href="https://instagram.com/sk.gupta507" target="_blank" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://linkedin.com/in/skgupta507" class="social-link">
+            <a href="https://linkedin.com/in/skgupta507" target="_blank" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
           
           <li class="social-item">
-            <a href="https://github.com/skgupta507" class="social-link">
+            <a href="https://github.com/skgupta507" target="_blank" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
@@ -441,37 +441,37 @@
   <ul class="clients-list has-scrollbar">
 
     <li class="clients-item">
-      <a href="https://unacademy.com">
+      <a href="https://unacademy.com" target="_blank">
         <img src="./assets/images/unacademyx.png" alt="Unacademy logo" class="client-logo">
       </a>
     </li>
 
     <li class="clients-item">
-      <a href="https://www.royalorchidhotels.com">
+      <a href="https://www.royalorchidhotels.com" target="_blank">
         <img src="./assets/images/Resort.png" alt="Royal Orchid Hotels logo" class="client-logo">
       </a>
     </li>
 
     <li class="clients-item">
-      <a href="https://levotel.in">
+      <a href="https://levotel.in" target="_blank">
         <img src="./assets/images/levotel.png" alt="Levotel logo" class="client-logo">
       </a>
     </li>
 
     <li class="clients-item">
-      <a href="https://spherebox.in">
+      <a href="https://spherebox.in" target="_blank">
         <img src="./assets/images/sphere.jpg" alt="Spherebox logo" class="client-logo">
       </a>
     </li>
 
     <li class="clients-item">
-      <a href="http://aircomfortsystems.in">
+      <a href="http://aircomfortsystems.in" target="_blank">
         <img src="./assets/images/acs.png" alt="Air Comfort Systems logo" class="client-logo">
       </a>
     </li>
 
     <li class="clients-item">
-      <a href="https://www.facebook.com/sandgrouse.in">
+      <a href="https://www.facebook.com/sandgrouse.in" target="_blank">
         <img src="./assets/images/sand.png" alt="Sand Grouse logo" class="client-logo">
       </a>
     </li>
